crates/squealy/tests/compile_fail/window_rejected_in_group_by.stderr
error[E0277]: the trait bound `squealy::WindowExprAst<squealy::WindowNoArg, squealy::WindowNil, squealy::WindowOrder<squealy::ColumnExprAst<PostId>, squealy::WindowNil>>: NonAggregateAst` is not satisfied
  --> tests/compile_fail/window_rejected_in_group_by.rs:16:10
   |
16 |         .group_by(|(post,)| row_number().over(|w| w.order_by(post.id.asc())))
   |          ^^^^^^^^ unsatisfied trait bound
   |
   = help: the trait `NonAggregateAst` is not implemented for `squealy::WindowExprAst<squealy::WindowNoArg, squealy::WindowNil, squealy::WindowOrder<squealy::ColumnExprAst<PostId>, squealy::WindowNil>>`
help: the trait `squealy::GroupByKeys<'_, Base>` is implemented for `Expr<'_, K, Ast>`
  --> $WORKSPACE/crates/squealy-core/src/query.rs
   |
   | / impl<'scope, Base, K, Ast> GroupByKeys<'scope, Base> for Expr<'scope, K, Ast>
   | | where
   | |     K: ExprKind,
   | |     // A grouping item may not contain an aggregate (`GROUP BY COUNT(..)` is rejected by the database).
   | |     Ast: ExprAst + crate::NonAggregateAst,
   | |__________________________________________^
   = note: required for `Expr<'_, i64, squealy::WindowExprAst<squealy::WindowNoArg, squealy::WindowNil, squealy::WindowOrder<squealy::ColumnExprAst<PostId>, squealy::WindowNil>>>` to implement `squealy::GroupByKeys<'_, squealy::From<'_, '_, TestConnection, HCons<__SquealyPostExprsProjection<'_>, HNil>, squealy::RootSource<Post<'_>>>>`
